force-app/main/default/objects/FEC_Stage_Change__c/FEC_Stage_Change__c.object-meta.xml
<CustomObject>
    <description>Là bảng dữ liệu quản lý thông tin/điều kiện để chuyển Stage trong quá trình xử lý Case</description>
    <label>Stage Change</label>
    <nameField>
        <displayFormat>SCN-{0}</displayFormat>
        <label>Stage Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>