force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Action_Button__c.field-meta.xml
<CustomField>
    <fullName>FEC_Action_Button__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Routing Action tương ứng để chuyển sang Stage tiếp theo</description>
    <label>Action Button</label>
    <referenceTo>FEC_Action_Button__c</referenceTo>
    <relationshipLabel>Stage Change</relationshipLabel>
    <relationshipName>Stage_Change</relationshipName>
    <type>Lookup</type>
</CustomField>