force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Code__c</fullName>
    <description>Mã định danh Stage Change</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>