force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>FEC_Condition_Logic__c</fullName>
    <description>Optional logic string to combine conditions with AND/OR/NOT and parentheses. Example: &quot;1 AND (2 OR 3)&quot;. If blank, all conditions are evaluated with AND.</description>
    <label>Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>