force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Condition_Requirement__c.field-meta.xml
<CustomField>
    <fullName>FEC_Condition_Requirement__c</fullName>
    <description>Regular Expression - Retun: True / False in the Background</description>
    <label>Condition Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>