force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Next_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Queue__c</fullName>
    <description>Rổ công việc sau khi chuyển Stage tiếp theo</description>
    <label>Next Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>