force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên Stage sẽ được thay đổi đến</description>
    <label>Next Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Stage Change (Next Stage)</relationshipLabel>
    <relationshipName>Next_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>