force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Previous_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên Stage hiện tại trước khi thay đổi</description>
    <label>Previous Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Stage Change</relationshipLabel>
    <relationshipName>Stage_Change</relationshipName>
    <type>Lookup</type>
</CustomField>