force-app/main/default/objects/FEC_Stage_Change__c/fields/FEC_Team_User_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_Team_User_Group__c</fullName>
    <description>Hiển thị Team theo Next Queue đã chọn</description>
    <label>Team User Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Group</valueSetName>
    </valueSet>
</CustomField>