force-app/main/default/objects/FEC_Stage_Change__c/validationRules/FEC_Restrict_Update_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_Restrict_Update_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED( FEC_Code__c ),
    NOT( ISBLANK( PRIORVALUE(FEC_Code__c) ) )
)</errorConditionFormula>
    <errorDisplayField>FEC_Code__c</errorDisplayField>
    <errorMessage>Cannot edit field after creation</errorMessage>
</ValidationRule>