force-app/main/default/objects/FEC_Stage_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Previous_Stage__c</columns>
    <columns>FEC_Next_Stage__c</columns>
    <columns>FEC_Next_Queue__c</columns>
    <columns>FEC_Action_Button__c</columns>
    <columns>FEC_Active__c</columns>
    <columns>FEC_Code__c</columns>
    <columns>FEC_Team_User_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Stage Changes</label>
</ListView>